# pysiptest

./: .gitignore  README.md  pyproject.toml  requirements.txt
behave/: sipp_call.pcap
behave/basecall/: alicebob1.feature  call_music.feature  cancel_call.feature  environment.py  info_to_callers.feature  phone_call.feature  presroute.feature  register.feature  testusers.py  transfer.feature
behave/basecall/steps/: events.py  presroute.py  sip_steps.py  smartphone.py
behave/park/: environment.py  park-occupied.feature
behave/presence/: behave_users.csv  environment.py  masspresence.feature  presence.feature  presence.txt  presence_users.csv  renew.feature  testdata.py
behave/rfc3665/: environment.py  registration.feature
doc/: headertable.tmp
lib/: HeaderFields.ods  digestauth.py  headerfield.py  rtpecho.py  sipmsg.py  sipphone.py  support.py
lib/unittest/: authtest.py  example.py  hdrtest.py  invite.txt  invite_m.txt  invite_o.txt  req_reg.txt  req_reg_m.txt  reqresp.txt  request.txt  response.txt  table2.txt  temp.txt  temp2.txt
park/: environment.py  park.feature
presence/: presence.feature
presence/steps/: presence.py  publish_msg.py
pysiptest/: __init__.py  eventsocket.py  headerfield.py  rtpecho.py  rtpplay.py  sipmsg.py  sipphone.py  support.py
rfc3665/: environment.py  registration.feature
rfc3665/steps/: environment.py  rtpplay.py  sip.py  sip_steps.py  sipphone.py  support.py
src/pysipunit/: rtpecho.py  sipmsg.py  sipphone.py  support.py
unittest/: authtest.py  hdrtest.py  siptest.py  test_opt.py  test_rtpplay.py
(+5 files in other folders)
