[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pysiptest"
version = "0.0.1"
authors = [
  { name="Brian Miller", email="BrianMiller793@gmail.com" },
]
description = "Behave-driven SIP unit test framework"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Free for non-commercial use",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/BrianMiller793/pysiptest"
"Bug Tracker" = "https://github.com/BrianMiller793/pysiptest/issues"
